--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -37,6 +37,14 @@ msgstr "FiWri"
 msgid "Github"
 msgstr "Github"
 
+#: src/features/demo-feature/components/CreateTodo.tsx:30
+msgid "demo-feature.create-button"
+msgstr "Add task"
+
+#: src/features/demo-feature/DemoFeature.tsx:23
+msgid "demo-feature.title"
+msgstr "ToDo List"
+
 #: src/features/home/Home.tsx:69
 msgid "switch color mode"
 msgstr "switch color mode"
